--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,4 +1,5 @@
 body {
+  
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
@@ -6,7 +7,25 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
+.landing{
+  align-self: center;
+  background-image: url('https://i.pinimg.com/564x/ec/64/db/ec64db62630362dcae3e83281c5fdd22.jpg');
+  background-repeat: no-repeat;
+  height: 600px;
+  width: 600px;
+} 
+.landing h2 {
+  margin-top:  350px;
+  font-size: 25px;
+}
+.landing-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: aliceblue;
 
+
+}
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
