--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,14 +1,319 @@
-/* .container{
+.title{
+    display: flex;
+    justify-content: space-around;
+    font-size: 3rem;
+    border-bottom: #232323 solid;
+    width: fit-content;
+    
+    margin-bottom: 30px;
+}
+.title-container {
     display: flex;
     justify-content: center;
-    width: 90%;
-} */
-.li-container{
+}
+.card-board {
+  display: flex;
+  flex-wrap: wrap;
+  border-color: #78290f;
+  border-style: solid;
+  border-radius: 10px;
+  border-width: 2px;
+  margin: 25px 10px;
+  background-color: #da6f24;
+  justify-content: space-around;
+  padding: 10px;
+  /* /////////////shadow */
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 3);
+
+  transition: 0,5s;
+}
+body {
+  background-color: #ffecd1;
+  color: #232323;
+}
+
+/* ///////////////////////////// butons */
+
+.button {
+  border: none;
+  border-radius: 0.5em;
+  box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, 0.2),
+    inset 0 2px 0 hsla(0, 0%, 100%, 0.1), inset 0 1.2em 0 hsla(0, 0%, 100%, 0.1),
+    inset 0 -0.2em 0 hsla(0, 0%, 100%, 0.1),
+    inset 0 -0.25em 0 hsla(0, 0%, 0%, 0.25),
+    0 0.25em 0.25em hsla(0, 0%, 0%, 0.05);
+
+  cursor: pointer;
+  display: inline-block;
+  font-weight: bold;
+  line-height: 1.5;
+  margin: 0 0.5em 1em;
+  position: relative;
+  text-decoration: none;
+  text-shadow: 0 1px 1px hsla(0, 0%, 100%, 0.25);
+  vertical-align: middle;
+}
+.button:hover {
+  outline: none;
+}
+.button:hover,
+.button:focus {
+  box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, 0.2),
+    inset 0 2px 0 hsla(0, 0%, 100%, 0.1), inset 0 1.2em 0 hsla(0, 0%, 100%, 0.1),
+    inset 0 -0.2em 0 hsla(0, 0%, 100%, 0.1),
+    inset 0 -0.25em 0 hsla(0, 0%, 0%, 0.25),
+    inset 0 0 0 3em hsla(0, 0%, 100%, 0.2),
+    0 0.25em 0.25em hsla(0, 0%, 0%, 0.05);
+}
+.button:active {
+  box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, 0.2),
+    inset 0 2px 0 hsla(0, 0%, 100%, 0.1), inset 0 1.2em 0 hsla(0, 0%, 100%, 0.1),
+    inset 0 0 0 3em hsla(0, 0%, 100%, 0.2),
+    inset 0 0.25em 0.5em hsla(0, 0%, 0%, 0.05), 0 -1px 1px hsla(0, 0%, 0%, 0.1),
+    0 1px 1px hsla(0, 0%, 100%, 0.25);
+  margin-top: 0.25em;
+  outline: none;
+  padding-bottom: 0.5em;
+}
+
+.medium {
+  font-size: 1em;
+  padding: 0.5em 1.5em 0.75em;
+}
+
+.regular {
+  border-radius: 0.5em;
+}
+.red {
+  background-color: #fd191d;
+}
+.orange {
+  background-color: #ff7d00;
+}
+.paginado-button{
+    transition: 0.5s;
+    margin-bottom: 30px;
+}
+.paginado-button:hover{
+    transform: scale(1.5);
+}
+/* ///////////////////////// filters */
+
+.filters{
     display: flex;
-    flex-wrap: wrap;
-    border-color: rgb(231, 5, 5);
-    border-style: solid;
+    margin: 10px 200px;
+    justify-content: space-around;
+}
+/* ///////////////////// select */
+
+.select {
+  padding: 8px 12px;
+  background-color: #eeeeee;
+  border: 1px solid #dddddd;
+  cursor: pointer;
+  border-radius: 10px;
+}
+.select:focus,
+.select:hover {
+  outline: none;
+  border: 1px solid #bbbbbb;
+  transform: scale(1.1);
+}
+
+
+.option {
+  background-color: #fffafa;
+}
+
+.top-option{
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+/* ///////////////////////////search bar */
+
+.search-bar input {
+  background-color: #eeeeee;
+  border: 1px solid #dddddd;
+  margin-right: none;
+  border-bottom-left-radius: 10px;
+  border-top-left-radius: 10px;
+  padding: 4px;
+  padding: 8px 12px;
+  margin-top: 5px;
+}
+
+.search-bar button {
+  border-top-right-radius: 10px;
+  border-bottom-right-radius: 10px;
+  border: 1px solid #b36d03;
+  margin-left: none;
+  padding: 8px 12px;
+  font-weight: bold;
+}
+.search-bar button:hover,
+.search-bar button:focus {
+  box-shadow: inset 0 0 0 1px hsla(0, 0%, 0%, 0.2),
+    inset 0 2px 0 hsla(0, 0%, 100%, 0.1), inset 0 1.2em 0 hsla(0, 0%, 100%, 0.1),
+    inset 0 -0.2em 0 hsla(0, 0%, 100%, 0.1),
+    inset 0 -0.25em 0 hsla(0, 0%, 0%, 0.25),
+    inset 0 0 0 3em hsla(0, 0%, 100%, 0.2),
+    0 0.25em 0.25em hsla(0, 0%, 0%, 0.05);
+}
+/* /////////////////////Nav */
+.nav{
+    display: flex;
+    padding-top: 10px;
+    justify-content: space-around;
+    background-color: #ffd6a5;
+    box-shadow: 0px 3px 10px rgba(0, 0, 0, 3);
+}
+
+/* ///////////////////// form */
+.form-container{
+  font-size: 1.5rem;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #bbbbbb;
     border-radius: 10px;
-    border-width: 2px;
-    margin-top: 5px;
+    padding: 10px;
+    box-shadow: 10px 10px 50px rgba(0, 0, 0, 3);
+    width: 40%;
+    margin-left: 30%;
+    margin-bottom: 30px;
+    
+}
+.form-container .l{
+  font-weight: bold;
+}
+.form-input{
+    display: flex;
+    justify-content: space-between;
+    margin: 0px 10px;
+    padding: 5px;
+}
+.bullet-container{
+    display: flex;
+    border: 1px solid #bbbbbb;
+    border-radius: 20px;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 3);
+    flex-wrap: wrap;
+    justify-content: center;
+}
+.diet-bullets{
+    background-color: rgba(183, 240, 183, 0.592);
+    margin: 5px 5px;
+    border-radius: 10px;
+    padding: 2px 4px;
+    transition: 0.3s;
+}
+.diet-bullets:hover{
+transform: scale(1.1);
+background-color: rgba(9, 250, 9, 0.592);
+
+}
+.bullet-container-chosen{
+  display: flex;
+    border: 1px solid #bbbbbb;
+    border-radius: 20px;
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 3);
+    flex-wrap: wrap;
+    justify-content: center;
+    width: 60%;
+    margin-left: 20%;
+}
+.diet-bullets-chosen{
+  display: flex;
+  flex-direction: row;
+  width: fit-content;
+  align-items: center;
+  background-color: rgba(9, 250, 9, 0.592);
+    margin: 2px 2px;
+    border-radius: 10px;
+    padding: 0px 4px;
+    transition: 0.3s;
+    height: 1.5rem;
+   
+}
+.diet-bullets-chosen:hover{
+  transform: scale(1.1);
+  }
+.diet-bullets-chosen button{
+  font-weight: bold;
+  font-size: 12px;
+  border-radius: 5px;
+  width: fit-content;
+  height: fit-content;
+  background-color: rgb(255, 94, 94);
+  margin-left: 4px;
+}
+.diet-bullets-chosen button:hover{
+  transform: scale(1.1);
+  background-color: red;
+}
+
+.validate-form{
+  background-color: rgba(255, 78, 78, 0.701);
+  color: #2f2d2d;
+  width: fit-content;
+  border-radius: 10px;
+  padding: 2px 12px;
+  margin-left: 5%;
+  font-size: 16px;
+  
+}
+
+
+/* /////////////////////////// Detail */
+.detail-container{
+    display: flex;
+    flex-direction: column;
+    max-width: 80%;
+    margin-left: 10%;
+    border: 1px solid #bbbbbb;
+    border-radius: 10px;
+    box-shadow: 10px 10px 20px rgba(0, 0, 0, 3);
+    margin-bottom: 30px;
+
+}
+.detail-img-res-container{
+    display: flex;
+    margin: 10px 10px;
+}
+.detail-img-res-container p{
+    font-size: 12px;
+    border-radius: 5px;
+    border: 1px solid #bbbbbb;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 3);
+    
+    
+
+}
+
+.detail-img-res-container img{
+    border-radius: 5px;
+    border: 1px solid #bbbbbb;
+    box-shadow: 0px 3px 8px rgba(0, 0, 0, 3);
+    margin-right: 15px;
+    width: 350px;
+}
+
+.detail-bullet-container{
+    width: 80%;
+    margin-left: 10%;
+    display: flex;
+    justify-content: center;
+    border: 1px solid #bbbbbb;
+    border-radius: 20px;
+    /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 3); */
+    flex-wrap: wrap;
+}
+.card-score{
+  background-color: yellow;
+  width: fit-content;
+  padding: 5px;
+  border-radius: 50%;
+  border: 1px solid #2f2d2d ;
+  position: absolute;
+  left: 80%;
 }
