--- a/client/src/styles/Home.css
+++ b/client/src/styles/Home.css
@@ -1,35 +1,35 @@
-.landing{
+.landing {
   margin-top: 10%;
   font-size: 2rem;
 }
-.title{
-    display: flex;
-    justify-content: space-around;
-    font-size: 3rem;
-    border-bottom: #232323 solid;
-    width: fit-content;
-    
-    margin-bottom: 30px;
+.title {
+  display: flex;
+  justify-content: space-around;
+  font-size: 3rem;
+  border-bottom: #232323 solid;
+  width: fit-content;
+
+  margin-bottom: 30px;
 }
 .title-container {
-    display: flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
 .card-board {
   display: flex;
   flex-wrap: wrap;
-  border-color: #78290f;
+  border-color: #302f2e;
   border-style: solid;
   border-radius: 10px;
   border-width: 2px;
   margin: 25px 10px;
-  background-color: #da6f24;
+  background-color: #252322;
   justify-content: space-around;
   padding: 10px;
   /* /////////////shadow */
   box-shadow: 10px 10px 20px rgba(0, 0, 0, 3);
 
-  transition: 0,5s;
+  transition: 0, 5s;
 }
 body {
   background-color: #ffecd1;
@@ -99,19 +99,19 @@ body {
 .orange {
   background-color: #ff7d00;
 }
-.paginado-button{
-    transition: 0.5s;
-    margin-bottom: 30px;
+.paginado-button {
+  transition: 0.5s;
+  margin-bottom: 30px;
 }
-.paginado-button:hover{
-    transform: scale(1.5);
+.paginado-button:hover {
+  transform: scale(1.5);
 }
 /* ///////////////////////// filters */
 
-.filters{
-    display: flex;
-    margin: 10px 200px;
-    justify-content: space-around;
+.filters {
+  display: flex;
+  margin: 10px 200px;
+  justify-content: space-around;
 }
 /* ///////////////////// select */
 
@@ -129,14 +129,13 @@ body {
   transform: scale(1.1);
 }
 
-
 .option {
   background-color: #fffafa;
 }
 
-.top-option{
-    border-top-left-radius: 10px;
-    border-top-right-radius: 10px;
+.top-option {
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
 }
 
 /* ///////////////////////////search bar */
@@ -170,84 +169,81 @@ body {
     0 0.25em 0.25em hsla(0, 0%, 0%, 0.05);
 }
 /* /////////////////////Nav */
-.nav{
-    display: flex;
-    padding-top: 10px;
-    justify-content: space-around;
-    background-color: #ffd6a5;
-    box-shadow: 0px 3px 10px rgba(0, 0, 0, 3);
+.nav {
+  display: flex;
+  padding-top: 10px;
+  justify-content: space-around;
+  background-color: #252322;
+  box-shadow: 0px 3px 10px rgba(0, 0, 0, 3);
 }
 
 /* ///////////////////// form */
-.form-container{
+.form-container {
   font-size: 1.5rem;
-    display: flex;
-    justify-content: center;
-    border: 1px solid #bbbbbb;
-    border-radius: 10px;
-    padding: 10px;
-    box-shadow: 10px 10px 50px rgba(0, 0, 0, 3);
-    width: 40%;
-    margin-left: 30%;
-    margin-bottom: 30px;
-    
+  display: flex;
+  justify-content: center;
+  border: 1px solid #bbbbbb;
+  border-radius: 10px;
+  padding: 10px;
+  box-shadow: 10px 10px 50px rgba(0, 0, 0, 3);
+  width: 40%;
+  margin-left: 30%;
+  margin-bottom: 30px;
 }
-.form-container .l{
+.form-container .l {
   font-weight: bold;
 }
-.form-input{
-    display: flex;
-    justify-content: space-between;
-    margin: 0px 10px;
-    padding: 5px;
-}
-.bullet-container{
-    display: flex;
-    border: 1px solid #bbbbbb;
-    border-radius: 20px;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 3);
-    flex-wrap: wrap;
-    justify-content: center;
-}
-.diet-bullets{
-    background-color: rgba(183, 240, 183, 0.592);
-    margin: 5px 5px;
-    border-radius: 10px;
-    padding: 2px 4px;
-    transition: 0.3s;
-}
-.diet-bullets:hover{
-transform: scale(1.1);
-background-color: rgba(9, 250, 9, 0.592);
-
-}
-.bullet-container-chosen{
+.form-input {
   display: flex;
-    border: 1px solid #bbbbbb;
-    border-radius: 20px;
-    box-shadow: 0px 0px 2px rgba(0, 0, 0, 3);
-    flex-wrap: wrap;
-    justify-content: center;
-    width: 60%;
-    margin-left: 20%;
+  justify-content: space-between;
+  margin: 0px 10px;
+  padding: 5px;
 }
-.diet-bullets-chosen{
+.bullet-container {
+  display: flex;
+  border: 1px solid #bbbbbb;
+  border-radius: 20px;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 3);
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.diet-bullets {
+  background-color: rgba(183, 240, 183, 0.592);
+  margin: 5px 5px;
+  border-radius: 10px;
+  padding: 2px 4px;
+  transition: 0.3s;
+}
+.diet-bullets:hover {
+  transform: scale(1.1);
+  background-color: rgba(9, 250, 9, 0.592);
+}
+.bullet-container-chosen {
+  display: flex;
+  border: 1px solid #bbbbbb;
+  border-radius: 20px;
+  box-shadow: 0px 0px 2px rgba(0, 0, 0, 3);
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 60%;
+  margin-left: 20%;
+}
+.diet-bullets-chosen {
   display: flex;
   flex-direction: row;
   width: fit-content;
   align-items: center;
   background-color: rgba(9, 250, 9, 0.592);
-    margin: 2px 2px;
-    border-radius: 10px;
-    padding: 0px 4px;
-    transition: 0.3s;
-    height: 1.5rem;
-   
+  margin: 2px 2px;
+  border-radius: 10px;
+  padding: 0px 4px;
+  transition: 0.3s;
+  height: 1.5rem;
 }
-.diet-bullets-chosen:hover{
+.diet-bullets-chosen:hover {
   transform: scale(1.1);
-  }
-.diet-bullets-chosen button{
+}
+.diet-bullets-chosen button {
   font-weight: bold;
   font-size: 12px;
   border-radius: 5px;
@@ -256,12 +252,12 @@ background-color: rgba(9, 250, 9, 0.592);
   background-color: rgb(255, 94, 94);
   margin-left: 4px;
 }
-.diet-bullets-chosen button:hover{
+.diet-bullets-chosen button:hover {
   transform: scale(1.1);
   background-color: red;
 }
 
-.validate-form{
+.validate-form {
   background-color: rgba(255, 78, 78, 0.701);
   color: #2f2d2d;
   width: fit-content;
@@ -269,60 +265,55 @@ background-color: rgba(9, 250, 9, 0.592);
   padding: 2px 12px;
   margin-left: 5%;
   font-size: 16px;
-  
 }
-
 
 /* /////////////////////////// Detail */
-.detail-container{
-    display: flex;
-    flex-direction: column;
-    max-width: 80%;
-    margin-left: 10%;
-    border: 1px solid #bbbbbb;
-    border-radius: 10px;
-    box-shadow: 10px 10px 20px rgba(0, 0, 0, 3);
-    margin-bottom: 30px;
-
+.detail-container {
+  display: flex;
+  flex-direction: column;
+  max-width: 80%;
+  margin-left: 10%;
+  border: 1px solid #bbbbbb;
+  border-radius: 10px;
+  box-shadow: 10px 10px 20px rgba(0, 0, 0, 3);
+  margin-bottom: 30px;
 }
-.detail-img-res-container{
-    display: flex;
-    margin: 10px 10px;
+.detail-img-res-container {
+  display: flex;
+  margin: 10px 10px;
 }
-.detail-img-res-container div{
-    font-size: 14px;
-    border-radius: 5px;
-    border: 1px solid #bbbbbb;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 3);
-    
-    
-
+.detail-img-res-container div {
+  width: 100%;
+  font-size: 14px;
+  border-radius: 5px;
+  border: 1px solid #bbbbbb;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 3);
 }
 
-.detail-img-res-container img{
-    border-radius: 5px;
-    border: 1px solid #bbbbbb;
-    box-shadow: 0px 3px 8px rgba(0, 0, 0, 3);
-    margin-right: 15px;
-    width: 350px;
+.detail-img-res-container img {
+  border-radius: 5px;
+  border: 1px solid #bbbbbb;
+  box-shadow: 0px 3px 8px rgba(0, 0, 0, 3);
+  margin-right: 15px;
+  width: 350px;
 }
 
-.detail-bullet-container{
-    width: 80%;
-    margin-left: 10%;
-    display: flex;
-    justify-content: center;
-    border: 1px solid #bbbbbb;
-    border-radius: 20px;
-    /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 3); */
-    flex-wrap: wrap;
+.detail-bullet-container {
+  width: 80%;
+  margin-left: 10%;
+  display: flex;
+  justify-content: center;
+  border: 1px solid #bbbbbb;
+  border-radius: 20px;
+  /* box-shadow: 0px 0px 20px rgba(0, 0, 0, 3); */
+  flex-wrap: wrap;
 }
-.card-score{
+.card-score {
   background-color: yellow;
   width: fit-content;
   padding: 5px;
   border-radius: 50%;
-  border: 1px solid #2f2d2d ;
+  border: 1px solid #2f2d2d;
   position: absolute;
   left: 80%;
 }
